[package]
name = "rust-yaml"
version = "0.1.0"
authors = ["Nikolaj Majorov <nikolaj@majorov.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"