[package]
name = "rhone-rusty-yaml"
version = "2.0.0"
authors = ["Nikolaj Majorov <nikolaj@majorov.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rhone_rusty_yaml"
crate-type = ["cdylib"] # bug for integration tests
#crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
serde_json= "1.0.53"
pyo3 ={version =  "0.12.3", features = ["extension-module"]}
